--- a/ManhPT_MidAssignment/ManhPT_MidAssignment.API/appsettings.json
+++ b/ManhPT_MidAssignment/ManhPT_MidAssignment.API/appsettings.json
@@ -6,14 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "BookManager": "Data Source=DESKTOP-A3BVP6M; Initial Catalog=LibraryManager; Integrated Security=True; Trusted_Connection=True; Encrypt=False"
+    "LibraryManager": "Data Source=DESKTOP-A3BVP6M; Initial Catalog=LibraryManager; Integrated Security=True; Trusted_Connection=True; Encrypt=False"
   },
   "Jwt": {
-    "Key": "demo_jwt_security_sinhvienhaui_hanoi",
-    "Issuer": "https://localhost:7244/",
-    "Audience": "https://localhost:7244/",
-    "TokenValidityInMinutes": 3,
-    "RefreshTokenValidityInDays": 7
+    "Issuer": "http://localhost:7244",
+    "ExpireMinutes": 720,
+    "Key": "MotCaiKeyNgauNhienNgay@@!!&&15-03"
   },
   "AllowedHosts": "*"
 }
