--- a/ManhPT_MidAssignment/ManhPT_MidAssignment.Application/ManhPT_MidAssignment.Application.csproj
+++ b/ManhPT_MidAssignment/ManhPT_MidAssignment.Application/ManhPT_MidAssignment.Application.csproj
@@ -8,10 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ManhPT_MidAssignment.Core\ManhPT_MidAssignment.Core.csproj" />
+    <ProjectReference Include="..\ManhPT_MidAssignment.Domain\ManhPT_MidAssignment.Domain.csproj" />
   </ItemGroup>
 
 </Project>
